<resources>
    <string name="app_name">Cineminha</string>
    <string name="nome_do_filme">Nome do Filme</string>
    <string name="genero_do_filme">Gênero do filme</string>
    <string name="format_data">DD/MM/YYYY</string>
    <string name="poster_do_filme">Poster do Filme</string>
    <string name="buscar">Buscar</string>
    <string name="title_cartaz">Em Cartaz</string>
    <string name="title_busca">buscar</string>
    <string name="title_favoritos">favoritos</string>
    <string name="sem_conexao">Sem Conexão</string>
    <string name="pref_file" translatable="false">prefFile</string>
    <string name="overview">overview</string>
    <string name="voltar">Voltar</string>
    <string name="lang_origem">Lang. Origem</string>
    <string name="ainda_nao_tem_favoritos">Ainda não tem favoritos!</string>
</resources>