<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetalheActivity">

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/nome_do_filme"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/overview"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nome"/>

    <TextView
        android:id="@+id/tv_genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/genero_do_filme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

    <TextView
        android:id="@+id/tv_lancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/format_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_lang_origem"
        app:layout_constraintTop_toBottomOf="@id/tv_genero"/>

    <TextView
        android:id="@+id/tv_lang_origem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lang_origem"
        app:layout_constraintStart_toEndOf="@id/tv_lancamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_genero"/>

    <ImageView
        android:id="@+id/iv_favotito_no"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lancamento"
        app:layout_constraintBottom_toTopOf="@id/iv_poster"
        android:contentDescription="@string/title_favoritos" />

    <ImageView
        android:id="@+id/iv_favotito_yes"
        android:src="@drawable/ic_baseline_favorite_24"
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lancamento"
        app:layout_constraintBottom_toTopOf="@id/iv_poster"
        android:contentDescription="@string/title_favoritos" />

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_camera_roll_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lancamento"
        app:layout_constraintBottom_toTopOf="@id/btn_voltar"
        android:contentDescription="@string/poster_do_filme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_voltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>