<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/nome_do_filme"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_poster" />

    <TextView
        android:id="@+id/tv_genero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/genero_do_filme"
        app:layout_constraintStart_toStartOf="@id/tv_nome"
        app:layout_constraintEnd_toStartOf="@id/tv_lancamento"
        app:layout_constraintTop_toBottomOf="@+id/tv_nome" />

    <TextView
        android:id="@+id/tv_lancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/format_data"
        app:layout_constraintStart_toEndOf="@id/tv_genero"
        app:layout_constraintEnd_toStartOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/tv_genero"/>

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_camera_roll_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/poster_do_filme" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_poster" />

</androidx.constraintlayout.widget.ConstraintLayout>
